--- a/_includes/home/home.html
+++ b/_includes/home/home.html
@@ -2,7 +2,7 @@
     <section class="hero">
         <div class="container hero__container">
             <div class="hero__logo">Hero</div>
-            <h1 class="hero__title">15 лет делаем приложения для крупного бизнеса</h1>
+            <h1 class="hero__title">Title</h1>
             <a href="{{ site.baseurl }}/404">404</a>
         </div>
     </section>
