--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,30 +1,166 @@
+.header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
-    max-width: 1200px;
+    max-width: 1280px;
     margin: 0 auto;
+    padding: 0 40px;
 }
 
 .hero {
+    padding-top: 96px;
     height: 832px;
     width: 100%;
     background-color: var(--color-yellow);
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__title {
+        font-size: 72px;
+        font-weight: 700;
+        text-align: center;
+        color: var(--color-dark);
+        line-height: 64px;
+        letter-spacing: -0.5px;
+        max-width: 900px;
+        margin: 0;
+    }
+    &__descr {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 32px;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+        max-width: 800px;
+        height: 64px;
+        margin-top: 40px;
+    }
+    &__img {
+        max-width: 352px;
+        height: 264px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            display: block;
+            height: 100%;
+            transform: rotate(45deg);
+        }
+    }
+    &__btn {
+        margin-top: 80px;
+    }
 }
 
-.hero__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.hero__logo {
-    margin-top: 28px;
-}
-
-.hero__title {
-    font-size: 72px;
-    font-weight: 700;
-    text-align: center;
-    color: var(--color-dark);
-    line-height: 64px;
-    letter-spacing: -0.5px;
-    max-width: 900px;
+.what-we-do {
+    padding-top: 100px;
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__caption {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 64px;
+        text-align: center;
+        letter-spacing: -0.5px;
+        color: var(--color-dark);
+        margin-top: 40px;
+        width: 100%;
+    }
+    &__items {
+        margin-top: 80px;
+        width: 100%;
+        display: grid;
+        grid-template-areas:
+            "item1 item1"
+            "item2 item3";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 24px;
+    }
+    &__item1 {
+        grid-area: item1;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-purple);
+        border-radius: 20px;
+        background-image: url(img/calc.png);
+        background-repeat: no-repeat, repeat;
+        background-position: right 70px bottom 50px;
+        background-size: 500px;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-white);
+            max-width: 404px;
+            margin-left: 56px;
+            margin-top: 88px;
+        }
+    }
+    &__item2 {
+        grid-area: item2;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-primary);
+        border-radius: 20px;
+        background-image: url(img/notebook.png);
+        background-repeat: no-repeat, repeat;
+        background-position: right -40px bottom -140px;
+        background-size: 600px;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-white);
+            max-width: 404px;
+            margin-left: 56px;
+            margin-top: 88px;
+        }
+    }
+    &__item3 {
+        grid-area: item3;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-white);
+        border-radius: 20px;
+        background-image: url(img/doc.png);
+        background-repeat: no-repeat, repeat;
+        background-position: right 81px bottom 1px;
+        background-size: 426px;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-dark);
+            max-width: 404px;
+            margin-left: 56px;
+            margin-top: 88px;
+        }
+    }
 }
