--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -1,27 +1,228 @@
 @media (max-width: 1280px) {
-    
 }
 
 @media (max-width: 960px) {
-    .hero__title {
-        font-size: 56px;
-        line-height: 56px;
+    .container {
+        max-width: 960px;
+    }
+    .hero {
+        height: 816px;
+        &__title {
+            font-size: 56px;
+            line-height: 56px;
+            max-width: 880px;
+        }
+        &__descr {
+            max-width: 880px;
+        }
+    }
+    .what-we-do {
+        &__caption {
+            font-size: 24px;
+            line-height: 32px;
+        }
+        &__item1 {
+            background-position: right 0px bottom 20px;
+        }
+        &__item2 {
+            background-size: 434px;
+            background-position: right -10px bottom -20px;
+            &-title {
+                max-width: 242px;
+            }
+        }
+        &__item3 {
+            background-size: 352px;
+            background-position: right 49px bottom 0px;
+        }
     }
 }
 
 @media (max-width: 640px) {
-    .hero__title {
-        font-size: 40px;
-        line-height: 40px;
+    .container{
+        max-width: 640px;
+        padding: 0 20px;
+    }
+    .hero {
+        height: 738px;
+        &__title {
+            font-size: 40px;
+            line-height: 40px;
+            max-width: 552px;
+        }
+        &__descr {
+            font-size: 16px;
+            line-height: 24px;
+            max-width: 552px;
+            margin-top: 30px;
+        }
+        &__btn {
+            margin-top: 60px;
+        }
+    }
+    .what-we-do {
+        &__title {
+            font-size: 32px;
+            line-height: 40px;
+            margin-top: 30px;
+        }
+        &__items {
+            margin-top: 60px;
+            grid-template-areas:
+                "item1"
+                "item2"
+                "item3";
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            grid-gap: 16px;
+        }
+        &__item1 {
+            height: 300px;
+            background-size: 255px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+                max-width: 233px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
+        &__item2 {
+            height: 300px;
+            background-size: 272px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+                max-width: 265px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
+        &__item3 {
+            height: 300px;
+            background-size: 244px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+                max-width: 353px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
     }
 }
 
 @media (max-width: 390px) {
-    .hero__title {
-        font-size: 24px;
-        line-height: 28px;
+    .container{
+        max-width: 390px;
+        padding: 0 16px;
+    }
+    .hero {
+        height: 612px;
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            max-width: 358px;
+        }
+        &__img {
+            max-width: 358px;
+            height: 200px;
+        }
+        &__descr {
+            font-size: 14px;
+            line-height: 20px;
+            max-width: 358px;
+            margin-top: 20px;
+        }
+        &__btn {
+            margin-top: 40px;
+        }
+    }
+    .what-we-do {
+        padding-top: 80px;
+        &__caption {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            margin-top: 20px;
+        }
+        &__items {
+            margin-top: 40px;
+        }
+        &__item1 {
+            height: 200px;
+            background-size: 161px;
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                max-width: 200px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
+        }
+        &__item2 {
+            height: 200px;
+            background-size: 177px;
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                max-width: 117px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
+        }
+        &__item3 {
+            height: 200px;
+            background-size: 149px;
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                max-width: 160px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
+        }
     }
 }
 
 @media (max-width: 320px) {
+    .container{
+        max-width: 320px;
+        padding: 0 10px;
+    }
+    .hero {
+        height: 640px;
+        &__title {
+            max-width: 288px;
+        }
+        &__descr {
+            max-width: 288px;
+        }
+    }
+    .what-we-do {
+        &__item1 {
+            background-size: 111px;
+            &-title {
+                max-width: 162px;
+            }
+        }
+        &__item2 {
+            background-size: 147px;
+            &-title {
+                max-width: 188px;
+            }
+        }
+        &__item3 {
+            background-size: 118px;
+            &-title {
+                max-width: 159px;
+            }
+        }
+    }
 }
