--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,4 +2,7 @@
     --color-primary: #367CF4;
     --color-yellow: #F3CA46;
     --color-dark: #333333;
+    --color-white: #FFFFFF;
+    --color-purple: #7b5deb;
+    --color-bacground: #F3F4F5;
   }
