--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,7 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
+    margin: 0;
 }
 
 a {
@@ -26,3 +27,39 @@ img {
     font-family: "Roboto Flex", sans-serif;
 }
 
+button {
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+p {
+    margin: 0;
+}
+
+.btn {
+    padding: 20px 35px;
+    border-radius: 10px;
+    max-width: 250px;
+    min-height: 60px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.btn--dark {
+    color: var(--color-white);
+    background-color: var(--color-dark);
+}
+
+.btn--dark:hover {
+    color: var(--color-white);
+    background-color: var(--color-primary);
+}
+
+main {
+    background: var(--color-bacground);
+}
