--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -164,3 +164,106 @@
         }
     }
 }
+
+.why-we {
+    padding-top: 100px;
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__caption {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 64px;
+        text-align: center;
+        letter-spacing: -0.5px;
+        color: var(--color-dark);
+        margin-top: 40px;
+        width: 100%;
+    }
+    &__items {
+        margin-top: 80px;
+        width: 100%;
+        display: grid;
+        grid-template-areas:
+            "item1 item2"
+            "item3 item3";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 24px;
+    }
+    &__item1 {
+        grid-area: item1;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-white);
+        border-radius: 20px;
+        background-image: url(img/search.png);
+        background-repeat: no-repeat, repeat;
+        background-position: center bottom 22px;
+        background-size: auto;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-dark);
+            max-width: 100%;
+            margin-left: 56px;
+            margin-top: 56px;
+        }
+    }
+    &__item2 {
+        grid-area: item2;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-blush);
+        border-radius: 20px;
+        background-image: url(img/rocket.png);
+        background-repeat: no-repeat, repeat;
+        background-position: center bottom 22px;
+
+        background-size: auto;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-white);
+            max-width: 404px;
+            margin-left: 56px;
+            margin-top: 56px;
+        }
+    }
+    &__item3 {
+        grid-area: item3;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: var(--color-purple);
+        border-radius: 20px;
+        background-image: url(img/calc.png);
+        background-repeat: no-repeat, repeat;
+        background-position: right bottom 16px;
+        background-size: auto;
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-white);
+            max-width: 50%;
+            margin-left: 56px;
+            margin-top: 88px;
+        }
+    }
+}
