--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,5 +4,6 @@
     --color-dark: #333333;
     --color-white: #FFFFFF;
     --color-purple: #7b5deb;
+    --color-blush: #DA657A;;
     --color-bacground: #F3F4F5;
   }
