--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -12,12 +12,28 @@
 .container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 40px;
+    padding: 100px 40px;
+}
+
+.link {
+    font-weight: 500;
+    font-size: 24px;
+    color: var(--color-primary);
+}
+.link:after {
+    display: inline-block;
+    content: "";
+    background-image: url("img/rarrow.svg");
+    background-size: 18px 14px;
+    background-repeat: no-repeat, repeat;
+    height: 14px;
+    width: 18px;
+    margin-left: 9px;
 }
 
 .hero {
-    padding-top: 96px;
-    height: 832px;
+    height: 100vh;
+    min-height: 832px;
     width: 100%;
     background-color: var(--color-yellow);
     &__container {
@@ -55,7 +71,7 @@
         img {
             display: block;
             height: 100%;
-            transform: rotate(45deg);
+            
         }
     }
     &__btn {
@@ -64,7 +80,6 @@
 }
 
 .what-we-do {
-    padding-top: 100px;
     &__container {
         display: flex;
         flex-direction: column;
@@ -97,26 +112,25 @@
             "item1 item1"
             "item2 item3";
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 600px 600px;
         grid-gap: 24px;
     }
     &__item1 {
         grid-area: item1;
         width: 100%;
-        height: 600px;
         display: flex;
+        justify-content: space-between;
         background-color: var(--color-purple);
         border-radius: 20px;
         background-image: url(img/calc.png);
         background-repeat: no-repeat, repeat;
-        background-position: right 70px bottom 50px;
-        background-size: 500px;
+        background-position: right bottom;
         &-title {
             font-weight: 600;
             font-size: 40px;
             line-height: 48px;
             color: var(--color-white);
-            max-width: 404px;
+            max-width: 40%;
             margin-left: 56px;
             margin-top: 88px;
         }
@@ -124,14 +138,13 @@
     &__item2 {
         grid-area: item2;
         width: 100%;
-        height: 600px;
         display: flex;
         background-color: var(--color-primary);
         border-radius: 20px;
         background-image: url(img/notebook.png);
         background-repeat: no-repeat, repeat;
-        background-position: right -40px bottom -140px;
-        background-size: 600px;
+        background-position: right bottom;
+        background-size: 420px;
         &-title {
             font-weight: 600;
             font-size: 40px;
@@ -145,14 +158,14 @@
     &__item3 {
         grid-area: item3;
         width: 100%;
-        height: 600px;
+        //height: 600px;
         display: flex;
         background-color: var(--color-white);
         border-radius: 20px;
         background-image: url(img/doc.png);
         background-repeat: no-repeat, repeat;
-        background-position: right 81px bottom 1px;
-        background-size: 426px;
+        background-position: right bottom;
+        background-size: 400px;
         &-title {
             font-weight: 600;
             font-size: 40px;
@@ -166,7 +179,6 @@
 }
 
 .why-we {
-    padding-top: 100px;
     &__container {
         display: flex;
         flex-direction: column;
@@ -267,3 +279,184 @@
         }
     }
 }
+
+.how-we-work {
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__caption {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 64px;
+        text-align: center;
+        letter-spacing: -0.5px;
+        color: var(--color-dark);
+        margin-top: 40px;
+        width: 100%;
+    }
+    &__items {
+        margin-top: 80px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+    &__item {
+        background-color: var(--color-white);
+        border-radius: 20px;
+        display: flex;
+        flex-direction: row;
+        &--reverse {
+            flex-direction: row-reverse;
+        }
+        &-col {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            padding-top: 88px;
+            padding-left: 56px;
+            padding-right: 56px;
+            padding-bottom: 88px;
+        }
+        &-center {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+        }
+        &-title {
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-dark);
+        }
+        &-desc {
+            font-size: 24px;
+            line-height: 32px;
+            color: var(--color-dark);
+            opacity: 0.56;
+            margin-top: 24px;
+        }
+        &-link {
+            display: inline-block;
+            margin-top: 56px;
+        }
+        &-img {
+            width: 400px;
+        }
+    }
+}
+
+.our-approach {
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__caption {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 64px;
+        text-align: center;
+        letter-spacing: -0.5px;
+        color: var(--color-dark);
+        margin-top: 40px;
+        width: 100%;
+    }
+    &__diagram {
+        margin-top: 80px;
+    }
+}
+
+.about-team {
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__caption {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        width: 100%;
+        text-align: center;
+        color: var(--color-dark);
+        opacity: 0.56;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 64px;
+        text-align: center;
+        letter-spacing: -0.5px;
+        color: var(--color-dark);
+        margin-top: 40px;
+        width: 100%;
+    }
+    &__items {
+        margin-top: 80px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+    }
+    &__item1 {
+        width: 60%;
+        background-color: var(--color-yellow);
+        border-radius: 20px;
+        &-title {
+            padding-top: 56px;
+            padding-left: 56px;
+            padding-right: 56px;
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-white);
+        }
+    }
+    &__item2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 40%;
+        background-color: var(--color-white);
+        border-radius: 20px;
+        &-title {
+            padding-top: 56px;
+            padding-left: 56px;
+            padding-right: 56px;
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 48px;
+            color: var(--color-dark);
+        }
+        &-img {
+            display: block;
+            margin-top: 28px;
+            max-width: 300px;
+        }
+    }
+}
+
+
