--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -2,11 +2,8 @@
 }
 
 @media (max-width: 960px) {
-    .container {
-        max-width: 960px;
-    }
     .hero {
-        height: 816px;
+        min-height: 816px;
         &__title {
             font-size: 56px;
             line-height: 56px;
@@ -73,15 +70,58 @@
             }
         }
     }
+    .how-we-work {
+        &__caption {
+            font-size: 24px;
+            line-height: 32px;
+        }
+    }
+    .our-approach {
+        &__caption {
+            font-size: 24px;
+            line-height: 32px;
+        }
+        &__title {
+            font-size: 48px;
+            line-height: 56px;
+        }
+    }
+    .about-team {
+        &__caption {
+            font-size: 24px;
+            line-height: 32px;
+        }
+        &__title {
+            font-size: 48px;
+            line-height: 56px;
+        }
+        &__items {
+            flex-direction: column;
+        }
+        &__item1 {
+            width: 100%;
+            min-height: 512px;
+        }
+        &__item2 {
+            width: 100%;
+            &-img {
+                margin-top: 44px;
+            }
+        }
+    }
 }
 
 @media (max-width: 640px) {
     .container {
-        max-width: 640px;
-        padding: 0 20px;
+        padding: 100px 20px;
+    }
+    .link:after {
+        background-size: 18px 10px;
+        height: 10px;
+        width: 18px;
     }
     .hero {
-        height: 738px;
+        min-height: 738px;
         &__title {
             font-size: 40px;
             line-height: 40px;
@@ -193,15 +233,91 @@
             }
         }
     }
+    .how-we-work {
+        &__title {
+            font-size: 32px;
+            line-height: 40px;
+            margin-top: 30px;
+        }
+        &__item {
+            flex-direction: column-reverse;
+
+            &-col {
+                width: 100%;
+                height: 60%;
+                padding: 40px;
+            }
+            &-center {
+                height: 40%;
+                width: 100%;
+            }
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+            }
+            &-desc {
+                font-size: 16px;
+                line-height: 24px;
+                margin-top: 16px;
+            }
+            &-link {
+                margin-top: 34px;
+                font-size: 18px;
+                line-height: 24px;
+            }
+            &-img {
+                width: 174px;
+            }
+        }
+    }
+    .our-approach {
+        &__title {
+            font-size: 32px;
+            line-height: 40px;
+        }
+        &__diagram {
+            margin-top: 60px;
+        }
+    }
+    .about-team {
+        &__title {
+            font-size: 32px;
+            line-height: 40px;
+        }
+        &__items {
+            margin-top: 60px;
+        }
+        &__item1 {
+            min-height: 416px;
+            &-title {
+                padding-top: 40px;
+                padding-left: 40px;
+                padding-right: 40px;
+                font-size: 24px;
+                line-height: 32px;
+            }
+        }
+        &__item2 {
+            &-title {
+                padding-top: 40px;
+                padding-left: 40px;
+                padding-right: 40px;
+                font-size: 24px;
+                line-height: 32px;
+            }
+            &-img {
+                max-width: 240px;
+            }
+        }
+    }
 }
 
 @media (max-width: 390px) {
     .container {
-        max-width: 390px;
-        padding: 0 16px;
+        padding: 80px 16px;
     }
     .hero {
-        height: 612px;
+        min-height: 612px;
         &__title {
             font-size: 24px;
             line-height: 28px;
@@ -222,7 +338,6 @@
         }
     }
     .what-we-do {
-        padding-top: 80px;
         &__caption {
             font-size: 16px;
             line-height: 24px;
@@ -270,7 +385,6 @@
         }
     }
     .why-we {
-        padding-top: 80px;
         &__caption {
             font-size: 16px;
             line-height: 24px;
@@ -327,15 +441,96 @@
             }
         }
     }
+    .how-we-work {
+        &__caption {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            margin-top: 20px;
+        }
+        &__item {
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+            }
+            &-desc {
+                font-size: 14px;
+                line-height: 20px;
+                margin-top: 4px;
+            }
+            &-link {
+                font-size: 16px;
+                line-height: 22px;
+                margin-top: 27px;
+            }
+            &-img {
+                width: 150px;
+            }
+        }
+    }
+    .our-approach {
+        &__caption {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            margin-top: 20px;
+        }
+        &__diagram {
+            margin-top: 40px;
+        }
+    }
+    .about-team {
+        &__caption {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            margin-top: 20px;
+        }
+        &__items {
+            gap: 16px;
+            margin-top: 40px;
+        }
+        &__item1 {
+            min-height: 346px;
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                padding-top: 24px;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+        }
+        &__item2 {
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                padding-top: 24px;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+            &-img  {
+                max-width: 195px;
+            }
+        }
+    }
 }
 
 @media (max-width: 320px) {
     .container {
         max-width: 320px;
-        padding: 0 10px;
+        padding: 80px 10px;
     }
     .hero {
-        height: 640px;
+        min-height: 640px;
         &__title {
             max-width: 288px;
         }
@@ -370,6 +565,5 @@
         &__item2 {
             height: 284px;
         }
-        
     }
 }
