add sections: trust-us, our-awards. fix bugs

--- a/_includes/home/section-about-team.html
+++ b/_includes/home/section-about-team.html
@@ -1,7 +1,7 @@
 <section class="about-team">
-    <div class="container about-team__container">
-        <h4 class="about-team__caption">О команде</h4>
-        <h2 class="about-team__title">Мы – команда профессионалов</h2>
+    <div class="container flex-container">
+        <h4 class="h4">О команде</h4>
+        <h2 class="h2 section-title">Мы – команда профессионалов</h2>
         <div class="about-team__items">
             <div class="about-team__item1">
                 <h3 class="about-team__item1-title">
