--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <div class="container hero__container">
+    <div class="container flex-container">
         <div class="hero__img">
             <img src="{{ site.baseurl }}/assets/img/rocket-rotate.png" alt="hero_img" />
         </div>
