--- a/_includes/home/section-our-approach.html
+++ b/_includes/home/section-our-approach.html
@@ -1,7 +1,7 @@
 <section class="our-approach">
-    <div class="container our-approach__container">
-        <h4 class="our-approach__caption">Наш подход</h4>
-        <h2 class="our-approach__title">Выбираем технологии, наиболее подходящие для решения задачи</h2>
+    <div class="container flex-container">
+        <h4 class="h4">Наш подход</h4>
+        <h2 class="h2 section-title">Выбираем технологии, наиболее подходящие для решения задачи</h2>
         <img class="our-approach__diagram" src="{{ site.baseurl }}/assets/img/diagram.png" alt="diagram">
     </div>
 </section>
