--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -1,16 +1,16 @@
 <section class="what-we-do">
-    <div class="container what-we-do__container">
-        <h4 class="what-we-do__caption">Что мы делаем</h4>
-        <h2 class="what-we-do__title">Приоритетные для нас сферы</h2>
+    <div class="container flex-container">
+        <h4 class="h4">Что мы делаем</h4>
+        <h2 class="h2 section-title">Приоритетные для нас сферы</h2>
         <div class="what-we-do__items">
-            <div class="what-we-do__item1">
-                <h3 class="what-we-do__item1-title">Цифровизация бизнес-процессов</h3>
+            <div class="what-we-do__item what-we-do__item1">
+                <h3 class="h3 what-we-do__item1-title">Цифровизация бизнес-процессов</h3>
             </div>
-            <div class="what-we-do__item2">
-                <h3 class="what-we-do__item2-title">Системы управления проектами</h3>
+            <div class="what-we-do__item what-we-do__item2">
+                <h3 class="h3 what-we-do__item2-title">Системы управления проектами</h3>
             </div>
-            <div class="what-we-do__item3">
-                <h3 class="what-we-do__item3-title">Электронный документооборот</h3>
+            <div class="what-we-do__item what-we-do__item3">
+                <h3 class="h3 what-we-do__item3-title">Электронный документооборот</h3>
             </div>
         </div>
     </div>
