--- a/_includes/home/section-how-we-work.html
+++ b/_includes/home/section-how-we-work.html
@@ -1,22 +1,28 @@
 <section class="how-we-work">
-    <div class="container how-we-work__container">
-        <h4 class="how-we-work__caption">Как мы работаем</h4>
-        <h2 class="how-we-work__title">Реализуем проекты любой сложности</h2>
+    <div class="container flex-container">
+        <h4 class="h4">Как мы работаем</h4>
+        <h2 class="h2 section-title">Реализуем проекты любой сложности</h2>
         <div class="how-we-work__items">
             <div class="how-we-work__item">
                 <div class="how-we-work__item-col">
                     <h3 class="how-we-work__item-title">Разработка с нуля</h3>
-                    <p class="how-we-work__item-desc">Мы поможем определить цели проекта и критерии их достижения, проведём необходимые исследования, спроектируем дизайн и архитектуру. На протяжении всего проекта мы будем вашим партнёром.</p>
-                    <a href="#" class="link how-we-work__item-link">Получить консултацию</a>
+                    <p class="how-we-work__item-desc">
+                        Мы поможем определить цели проекта и критерии их достижения, проведём необходимые исследования,
+                        спроектируем дизайн и архитектуру. На протяжении всего проекта мы будем вашим партнёром.
+                    </p>
+                    <a href="#" class="link how-we-work__item-link">Получить консультацию</a>
                 </div>
                 <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/rocket-rotate.png" alt="" />
+                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/rocket-rotate2.png" alt="" />
                 </div>
             </div>
             <div class="how-we-work__item how-we-work__item--reverse">
                 <div class="how-we-work__item-col">
                     <h3 class="how-we-work__item-title">Проектная работа</h3>
-                    <p class="how-we-work__item-desc">У вас есть готовое техническое задание или концепция проекта. Мы внимательно изучим объем работ, разобьем на этапы, согласуем сроки и бюджет и выдадим результат.</p>
+                    <p class="how-we-work__item-desc">
+                        У вас есть готовое техническое задание или концепция проекта. Мы внимательно изучим объем работ,
+                        разобьем на этапы, согласуем сроки и бюджет и выдадим результат.
+                    </p>
                     <a href="#" class="link how-we-work__item-link">Расчитать смету по ТЗ</a>
                 </div>
                 <div class="how-we-work__item-center">
@@ -26,7 +32,10 @@
             <div class="how-we-work__item">
                 <div class="how-we-work__item-col">
                     <h3 class="how-we-work__item-title">Гибкая разработка</h3>
-                    <p class="how-we-work__item-desc">У вас есть сложные задачи, которые требуют особого подхода. Мы будем работать спринтами, по итогам которых команда проанализирует результаты и поставит приоритеты для следующего цикла.</p>
+                    <p class="how-we-work__item-desc">
+                        У вас есть сложные задачи, которые требуют особого подхода. Мы будем работать спринтами, по
+                        итогам которых команда проанализирует результаты и поставит приоритеты для следующего цикла.
+                    </p>
                     <a href="#" class="link how-we-work__item-link">Написать нам</a>
                 </div>
                 <div class="how-we-work__item-center">
