--- a/_includes/home/section-why-we.html
+++ b/_includes/home/section-why-we.html
@@ -1,16 +1,16 @@
 <section class="why-we">
-    <div class="container why-we__container">
-        <h4 class="why-we__caption">Почему мы</h4>
-        <h2 class="why-we__title">IT-бюро со штатом сильных специалистов</h2>
+    <div class="container flex-container">
+        <h4 class="h4">Почему мы</h4>
+        <h2 class="h2 section-title">IT-бюро со штатом сильных специалистов</h2>
         <div class="why-we__items">
-            <div class="why-we__item1">
-                <h3 class="why-we__item1-title">Умеем внедрять программные системы в больших компаниях</h3>
+            <div class="why-we__item why-we__item1">
+                <h3 class="h3 why-we__item1-title">Умеем внедрять программные системы в больших компаниях</h3>
             </div>
-            <div class="why-we__item2">
-                <h3 class="why-we__item2-title">100% наших проектов доведены до финала</h3>
+            <div class="why-we__item why-we__item2">
+                <h3 class="h3 why-we__item2-title">100% наших проектов доведены до финала</h3>
             </div>
-            <div class="why-we__item3">
-                <h3 class="why-we__item3-title">
+            <div class="why-we__item why-we__item3">
+                <h3 class="h3 why-we__item3-title">
                     Помогаем сформулировать требования, спроектировать систему, написать техническое задание
                 </h3>
             </div>
