--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -2,6 +2,14 @@
 }
 
 @media (max-width: 960px) {
+    .h4 {
+        font-size: 24px;
+        line-height: 32px;
+    }
+    .h2 {
+        font-size: 48px;
+        line-height: 56px;
+    }
     .hero {
         min-height: 816px;
         &__title {
@@ -14,10 +22,6 @@
         }
     }
     .what-we-do {
-        &__caption {
-            font-size: 24px;
-            line-height: 32px;
-        }
         &__item1 {
             background-position: right 0px bottom 20px;
         }
@@ -34,10 +38,6 @@
         }
     }
     .why-we {
-        &__caption {
-            font-size: 24px;
-            line-height: 32px;
-        }
         &__items {
             grid-template-areas:
                 "item1"
@@ -71,30 +71,13 @@
         }
     }
     .how-we-work {
-        &__caption {
-            font-size: 24px;
-            line-height: 32px;
-        }
-    }
-    .our-approach {
-        &__caption {
-            font-size: 24px;
-            line-height: 32px;
-        }
-        &__title {
-            font-size: 48px;
-            line-height: 56px;
+        &__item {
+            &-col {
+                padding-right: 5px;
+            }
         }
     }
     .about-team {
-        &__caption {
-            font-size: 24px;
-            line-height: 32px;
-        }
-        &__title {
-            font-size: 48px;
-            line-height: 56px;
-        }
         &__items {
             flex-direction: column;
         }
@@ -109,9 +92,144 @@
             }
         }
     }
+    .trust-us {
+        &__items {
+            flex-direction: column;
+        }
+    }
+}
+
+@media (max-width: 800px) {
+    .h2 {
+        font-size: 32px;
+        line-height: 40px;
+    }
+    .h3 {
+        font-size: 24px;
+        line-height: 32px;
+    }
+    .section-title {
+        margin-top: 30px;
+    }
+    .what-we-do {
+        &__items {
+            margin-top: 60px;
+            grid-template-areas:
+                "item1"
+                "item2"
+                "item3";
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            grid-gap: 16px;
+        }
+        &__item {
+            height: 300px;
+        }
+        &__item1 {
+            background-size: 255px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                max-width: 233px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
+        &__item2 {
+            background-size: 272px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                max-width: 265px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
+        &__item3 {
+            background-size: 244px;
+            background-position: right 0px bottom 0px;
+            &-title {
+                max-width: 353px;
+                margin-left: 40px;
+                margin-top: 40px;
+            }
+        }
+    }
+    .why-we {
+        &__items {
+            margin-top: 60px;
+        }
+        &__item1 {
+            height: 300px;
+            background-size: 206px;
+            &-title {
+                max-width: 55%;
+                margin-top: 40px;
+                margin-left: 40px;
+            }
+        }
+        &__item2 {
+            height: 300px;
+            background-size: 206px;
+            &-title {
+                max-width: 55%;
+                margin-top: 40px;
+                margin-left: 40px;
+            }
+        }
+        &__item3 {
+            height: 300px;
+            background-size: 206px;
+            &-title {
+                max-width: 55%;
+                margin-top: 40px;
+                margin-left: 40px;
+            }
+        }
+    }
+    .how-we-work {
+        &__item {
+            flex-direction: column-reverse;
+            &-col {
+                width: 100%;
+                height: 60%;
+                padding: 20px 40px 40px 40px;
+            }
+            &-center {
+                height: 40%;
+                width: 100%;
+            }
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+            }
+            &-desc {
+                font-size: 16px;
+                line-height: 24px;
+                margin-top: 16px;
+            }
+            &-link {
+                margin-top: 34px;
+                font-size: 18px;
+                line-height: 24px;
+            }
+            &-img {
+                max-width: 174px;
+            }
+        }
+    }
 }
 
 @media (max-width: 640px) {
+    .h2 {
+        font-size: 32px;
+        line-height: 40px;
+    }
+    .h3 {
+        font-size: 24px;
+        line-height: 32px;
+    }
+    .section-title {
+        margin-top: 30px;
+    }
     .container {
         padding: 100px 20px;
     }
@@ -137,153 +255,12 @@
             margin-top: 60px;
         }
     }
-    .what-we-do {
-        &__title {
-            font-size: 32px;
-            line-height: 40px;
-            margin-top: 30px;
-        }
-        &__items {
-            margin-top: 60px;
-            grid-template-areas:
-                "item1"
-                "item2"
-                "item3";
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-gap: 16px;
-        }
-        &__item1 {
-            height: 300px;
-            background-size: 255px;
-            background-position: right 0px bottom 0px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 233px;
-                margin-left: 40px;
-                margin-top: 40px;
-            }
-        }
-        &__item2 {
-            height: 300px;
-            background-size: 272px;
-            background-position: right 0px bottom 0px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 265px;
-                margin-left: 40px;
-                margin-top: 40px;
-            }
-        }
-        &__item3 {
-            height: 300px;
-            background-size: 244px;
-            background-position: right 0px bottom 0px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 353px;
-                margin-left: 40px;
-                margin-top: 40px;
-            }
-        }
-    }
-    .why-we {
-        &__title {
-            font-size: 32px;
-            line-height: 40px;
-            margin-top: 30px;
-        }
-        &__items {
-            margin-top: 60px;
-        }
-        &__item1 {
-            height: 300px;
-            background-size: 206px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 55%;
-                margin-top: 40px;
-                margin-left: 40px;
-            }
-        }
-        &__item2 {
-            height: 300px;
-            background-size: 206px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 55%;
-                margin-top: 40px;
-                margin-left: 40px;
-            }
-        }
-        &__item3 {
-            height: 300px;
-            background-size: 206px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-                max-width: 55%;
-                margin-top: 40px;
-                margin-left: 40px;
-            }
-        }
-    }
-    .how-we-work {
-        &__title {
-            font-size: 32px;
-            line-height: 40px;
-            margin-top: 30px;
-        }
-        &__item {
-            flex-direction: column-reverse;
-
-            &-col {
-                width: 100%;
-                height: 60%;
-                padding: 40px;
-            }
-            &-center {
-                height: 40%;
-                width: 100%;
-            }
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-            }
-            &-desc {
-                font-size: 16px;
-                line-height: 24px;
-                margin-top: 16px;
-            }
-            &-link {
-                margin-top: 34px;
-                font-size: 18px;
-                line-height: 24px;
-            }
-            &-img {
-                width: 174px;
-            }
-        }
-    }
     .our-approach {
-        &__title {
-            font-size: 32px;
-            line-height: 40px;
-        }
         &__diagram {
             margin-top: 60px;
         }
     }
     .about-team {
-        &__title {
-            font-size: 32px;
-            line-height: 40px;
-        }
         &__items {
             margin-top: 60px;
         }
@@ -310,9 +287,55 @@
             }
         }
     }
+    .trust-us {
+        &__items {
+            margin-top: 60px;
+            padding: 40px;
+            grid-template-areas:
+                "item1 item2"
+                "item4 item3"
+                "item5 item6";
+            grid-template-rows: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+    .our-awards {
+        &__items {
+            margin-top: 60px;
+        }
+        & img {
+            max-width: 180px;
+        }
+        &__item {
+            padding: 24px;
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+            }
+            &-desc {
+                font-size: 16px;
+                line-height: 24px;
+            }
+        }
+    }
 }
 
 @media (max-width: 390px) {
+    .h4 {
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .h3 {
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .h2 {
+        font-size: 24px;
+        line-height: 28px;
+    }
+    .section-title {
+        margin-top: 20px;
+    }
     .container {
         padding: 80px 16px;
     }
@@ -324,8 +347,9 @@
             max-width: 358px;
         }
         &__img {
-            max-width: 358px;
-            height: 200px;
+            & img {
+                height: 100%;
+            }
         }
         &__descr {
             font-size: 14px;
@@ -338,46 +362,31 @@
         }
     }
     .what-we-do {
-        &__caption {
-            font-size: 16px;
-            line-height: 24px;
-        }
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 20px;
-        }
         &__items {
             margin-top: 40px;
         }
-        &__item1 {
+        &__item {
             height: 200px;
+        }
+        &__item1 {
             background-size: 161px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 200px;
                 margin-top: 24px;
                 margin-left: 24px;
             }
         }
         &__item2 {
-            height: 200px;
             background-size: 177px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 117px;
                 margin-top: 24px;
                 margin-left: 24px;
             }
         }
         &__item3 {
-            height: 200px;
             background-size: 149px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 160px;
                 margin-top: 24px;
                 margin-left: 24px;
@@ -385,15 +394,6 @@
         }
     }
     .why-we {
-        &__caption {
-            font-size: 16px;
-            line-height: 24px;
-        }
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 20px;
-        }
         &__items {
             margin-top: 40px;
         }
@@ -404,10 +404,7 @@
             height: 260px;
             background-size: 140px;
             background-position: center top 24px;
-
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 100%;
                 margin: 24px;
             }
@@ -420,8 +417,6 @@
             background-size: 140px;
             background-position: center top 24px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 100%;
                 margin: 24px;
             }
@@ -434,23 +429,12 @@
             background-size: 140px;
             background-position: center top 24px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
                 max-width: 100%;
                 margin: 24px;
             }
         }
     }
     .how-we-work {
-        &__caption {
-            font-size: 16px;
-            line-height: 24px;
-        }
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 20px;
-        }
         &__item {
             &-title {
                 font-size: 18px;
@@ -461,40 +445,25 @@
                 line-height: 20px;
                 margin-top: 4px;
             }
+            &-col {
+                padding: 24px 24px 24px 24px;
+            }
             &-link {
                 font-size: 16px;
                 line-height: 22px;
                 margin-top: 27px;
             }
             &-img {
-                width: 150px;
+                max-width: 150px;
             }
         }
     }
     .our-approach {
-        &__caption {
-            font-size: 16px;
-            line-height: 24px;
-        }
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 20px;
-        }
         &__diagram {
             margin-top: 40px;
         }
     }
     .about-team {
-        &__caption {
-            font-size: 16px;
-            line-height: 24px;
-        }
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 20px;
-        }
         &__items {
             gap: 16px;
             margin-top: 40px;
@@ -517,8 +486,40 @@
                 padding-left: 24px;
                 padding-right: 24px;
             }
-            &-img  {
+            &-img {
                 max-width: 195px;
+            }
+        }
+    }
+    .trust-us {
+        &__items {
+            padding: 24px;
+        }
+    }
+    .our-awards {
+        &__items {
+            margin-top: 40px;
+            grid-template-areas:
+                "item1"
+                "item2"
+                "item3"
+                "item4";
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr;
+        }
+        &__item {
+            & img {
+                max-width: 150px;
+            }
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                margin-top: 40px;
+            }
+            &-desc {
+                font-size: 14px;
+                line-height: 20px;
+                margin-top: 16px;
             }
         }
     }
@@ -526,7 +527,6 @@
 
 @media (max-width: 320px) {
     .container {
-        max-width: 320px;
         padding: 80px 10px;
     }
     .hero {
@@ -564,6 +564,11 @@
         }
         &__item2 {
             height: 284px;
+        }
+    }
+    .trust-us {
+        &__items {
+            padding: 24px;
         }
     }
 }
