--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,4 +6,6 @@
     --color-purple: #7b5deb;
     --color-blush: #DA657A;;
     --color-bacground: #F3F4F5;
+    --color-granite: #343C45;
+    
   }
