--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -97,6 +97,17 @@
             flex-direction: column;
         }
     }
+    .footer {
+        &__title {
+            font-size: 56px;
+            line-height: 56px;
+            margin: 150px 40px 0 40px;
+        }
+        &__descr {
+            margin-left: 160.5px;
+            margin-right: 160.5px;
+        }
+    }
 }
 
 @media (max-width: 800px) {
@@ -318,6 +329,42 @@
             }
         }
     }
+    .footer {
+        &__title {
+            font-size: 40px;
+            line-height: 40px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        &__descr {
+            font-size: 16px;
+            line-height: 24px;
+            margin-top: 32px;
+            margin-left: 75px;
+            margin-right: 75px;
+        }
+        &__btn {
+            font-size: 16px;
+            margin-top: 60px;
+            padding: 18px 24px;
+        }
+        &__bottom {
+            flex-direction: column;
+            align-items: center;
+            margin: 100px 20px 40px 20px;
+            &-right {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+        &__personal {
+            margin-top: 8px;
+            margin-right: 0;
+        }
+        &__privacy {
+            margin-top: 8px;
+        }
+    }
 }
 
 @media (max-width: 390px) {
@@ -523,6 +570,23 @@
             }
         }
     }
+    .footer {
+        &__title {
+            font-size: 24px;
+            line-height: 28px;
+            margin-left: 16px;
+            margin-right: 16px;
+        }
+        &__descr {
+            font-size: 14px;
+            line-height: 20px;
+            margin-left: 62px;
+            margin-right: 62px;
+        }
+        &__bottom {
+            margin: 100px 16px 40px 16px;
+        }
+    }
 }
 
 @media (max-width: 320px) {
@@ -571,4 +635,5 @@
             padding: 24px;
         }
     }
+    
 }
