--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 @import "variables";
+@import "common";
 @import "home";
 @import "media";
 
@@ -38,29 +39,10 @@ p {
     margin: 0;
 }
 
-.btn {
-    padding: 20px 35px;
-    border-radius: 10px;
-    max-width: 250px;
-    min-height: 60px;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: center;
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-}
-
-.btn--dark {
-    color: var(--color-white);
-    background-color: var(--color-dark);
-}
-
-.btn--dark:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
-}
-
 main {
     background: var(--color-bacground);
 }
+
+
+
 
