--- a/_includes/home/section-about-team.html
+++ b/_includes/home/section-about-team.html
@@ -4,13 +4,13 @@
         <h2 class="h2 section-title">Мы – команда профессионалов</h2>
         <div class="about-team__items">
             <div class="about-team__item1">
-                <h3 class="about-team__item1-title">
+                <h3 class="h3 about-team__item1-title">
                     Над вашим проектом будут работать менеджеры, дизайнеры, разработчики, инженеры по качеству
                     и специалисты по внедрению
                 </h3>
             </div>
             <div class="about-team__item2">
-                <h3 class="about-team__item2-title">Основа команды специалисты с опытом более 5 лет</h3>
+                <h3 class="h3 about-team__item2-title">Основа команды специалисты с опытом более 5 лет</h3>
                 <img class="about-team__item2-img" src="{{ site.baseurl }}/assets/img/search.png" alt="">
             </div>
         </div>
