--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -227,6 +227,25 @@
             }
         }
     }
+    .our-awards {
+        &__items {
+            margin-top: 60px;
+        }
+        & img {
+            max-width: 180px;
+        }
+        &__item {
+            padding: 24px;
+            &-title {
+                font-size: 24px;
+                line-height: 32px;
+            }
+            &-desc {
+                font-size: 16px;
+                line-height: 24px;
+            }
+        }
+    }
 }
 
 @media (max-width: 640px) {
@@ -281,8 +300,8 @@
                 padding-top: 40px;
                 padding-left: 40px;
                 padding-right: 40px;
-                font-size: 24px;
-                line-height: 32px;
+                // font-size: 24px;
+                // line-height: 32px;
             }
         }
         &__item2 {
@@ -290,8 +309,8 @@
                 padding-top: 40px;
                 padding-left: 40px;
                 padding-right: 40px;
-                font-size: 24px;
-                line-height: 32px;
+                // font-size: 24px;
+                // line-height: 32px;
             }
             &-img {
                 max-width: 240px;
@@ -310,25 +329,7 @@
             grid-template-columns: 1fr 1fr;
         }
     }
-    .our-awards {
-        &__items {
-            margin-top: 60px;
-        }
-        & img {
-            max-width: 180px;
-        }
-        &__item {
-            padding: 24px;
-            &-title {
-                font-size: 24px;
-                line-height: 32px;
-            }
-            &-desc {
-                font-size: 16px;
-                line-height: 24px;
-            }
-        }
-    }
+    
     .footer {
         &__title {
             font-size: 40px;
@@ -363,6 +364,109 @@
         }
         &__privacy {
             margin-top: 8px;
+        }
+    }
+}
+
+@media (max-width: 520px) {
+    .why-we {
+        &__items {
+            margin-top: 40px;
+        }
+        &__item1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 260px;
+            background-size: 140px;
+            background-position: center top 24px;
+            &-title {
+                max-width: 100%;
+                margin: 24px;
+            }
+        }
+        &__item2 {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 260px;
+            background-size: 140px;
+            background-position: center top 24px;
+            &-title {
+                max-width: 100%;
+                margin: 24px;
+            }
+        }
+        &__item3 {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 308px;
+            background-size: 140px;
+            background-position: center top 24px;
+            &-title {
+                max-width: 100%;
+                margin: 24px;
+            }
+        }
+    }
+    .our-awards {
+        &__items {
+            margin-top: 40px;
+            grid-template-areas:
+                "item1"
+                "item2"
+                "item3"
+                "item4";
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr;
+        }
+        &__item {
+            & img {
+                max-width: 150px;
+            }
+            &-title {
+                font-size: 18px;
+                line-height: 24px;
+                margin-top: 40px;
+            }
+            &-desc {
+                font-size: 14px;
+                line-height: 20px;
+                margin-top: 16px;
+            }
+        }
+    }
+    .what-we-do {
+        &__items {
+            margin-top: 40px;
+        }
+        &__item {
+            height: 200px;
+        }
+        &__item1 {
+            background-size: 161px;
+            &-title {
+                max-width: 200px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
+        }
+        &__item2 {
+            background-size: 177px;
+            &-title {
+                max-width: 117px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
+        }
+        &__item3 {
+            background-size: 149px;
+            &-title {
+                max-width: 160px;
+                margin-top: 24px;
+                margin-left: 24px;
+            }
         }
     }
 }
@@ -408,79 +512,8 @@
             margin-top: 40px;
         }
     }
-    .what-we-do {
-        &__items {
-            margin-top: 40px;
-        }
-        &__item {
-            height: 200px;
-        }
-        &__item1 {
-            background-size: 161px;
-            &-title {
-                max-width: 200px;
-                margin-top: 24px;
-                margin-left: 24px;
-            }
-        }
-        &__item2 {
-            background-size: 177px;
-            &-title {
-                max-width: 117px;
-                margin-top: 24px;
-                margin-left: 24px;
-            }
-        }
-        &__item3 {
-            background-size: 149px;
-            &-title {
-                max-width: 160px;
-                margin-top: 24px;
-                margin-left: 24px;
-            }
-        }
-    }
-    .why-we {
-        &__items {
-            margin-top: 40px;
-        }
-        &__item1 {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            height: 260px;
-            background-size: 140px;
-            background-position: center top 24px;
-            &-title {
-                max-width: 100%;
-                margin: 24px;
-            }
-        }
-        &__item2 {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            height: 260px;
-            background-size: 140px;
-            background-position: center top 24px;
-            &-title {
-                max-width: 100%;
-                margin: 24px;
-            }
-        }
-        &__item3 {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            height: 308px;
-            background-size: 140px;
-            background-position: center top 24px;
-            &-title {
-                max-width: 100%;
-                margin: 24px;
-            }
-        }
-    }
+    
+    
     .how-we-work {
         &__item {
             &-title {
@@ -518,8 +551,8 @@
         &__item1 {
             min-height: 346px;
             &-title {
-                font-size: 18px;
-                line-height: 24px;
+                // font-size: 18px;
+                // line-height: 24px;
                 padding-top: 24px;
                 padding-left: 24px;
                 padding-right: 24px;
@@ -527,8 +560,8 @@
         }
         &__item2 {
             &-title {
-                font-size: 18px;
-                line-height: 24px;
+                // font-size: 18px;
+                // line-height: 24px;
                 padding-top: 24px;
                 padding-left: 24px;
                 padding-right: 24px;
@@ -543,33 +576,7 @@
             padding: 24px;
         }
     }
-    .our-awards {
-        &__items {
-            margin-top: 40px;
-            grid-template-areas:
-                "item1"
-                "item2"
-                "item3"
-                "item4";
-            grid-template-rows: 1fr 1fr 1fr 1fr;
-            grid-template-columns: 1fr;
-        }
-        &__item {
-            & img {
-                max-width: 150px;
-            }
-            &-title {
-                font-size: 18px;
-                line-height: 24px;
-                margin-top: 40px;
-            }
-            &-desc {
-                font-size: 14px;
-                line-height: 20px;
-                margin-top: 16px;
-            }
-        }
-    }
+    
     .footer {
         &__title {
             font-size: 24px;
