added a basic projects page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,5 +4,5 @@
   <body>
     {{ content }}
   </body>
-
+  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
 </html>
