--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -30,7 +30,7 @@
     font-weight: 600;
     font-size: 32px;
     line-height: 40px;
-    width: 100%;
+    //width: 100%;
     text-align: center;
     color: var(--color-dark);
     opacity: 0.56;
