--- a/_includes/projects/filters.html
+++ b/_includes/projects/filters.html
@@ -4,11 +4,9 @@
         <div class="dropdown" data-path="spheres">
             <input type="text" class="dropdown__input" placeholder="Все сферы" readonly> 
             <div class="dropdown__options" data-target="spheres">
-                <div class="dropdown__options-item">Цифровизация бизнес-процессов</div>
-                <div class="dropdown__options-item">Системы управления проектами</div>
-                <div class="dropdown__options-item">Электронный документооборот</div>
-                <div class="dropdown__options-item">Медицина</div>
-                <div class="dropdown__options-item">Менеджмент</div>
+                {% for category in site.data.categories %}
+                    <a class="dropdown__options-item" href="{{site.baseuri}}/projects/{{category.en}}">{{category.ru}}</a>
+                {% endfor %}
             </div>
         </div>
         <div class="dropdown" data-path="technologies">
